--- a/EfficiencyGap.ipynb
+++ b/EfficiencyGap.ipynb
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('state_legislative_election_results_1971_2012.csv')\n",
+    "df = pd.read_csv('data/state_legislative_election_results_1971_2012.csv')\n",
     "df.head()"
    ]
   },
@@ -351,7 +351,7 @@
     "# for i in range(len(df)):\n",
     "#     df.loc[i, 'Efficiency Gap'] = calculateEG(df['Dem Votes'][i], df['GOP Votes'][i], df['Party'][i])\n",
     "    \n",
-    "# df.to_csv('state_legislative_election_results_with_eg.csv', index=False)"
+    "# df.to_csv('data/state_legislative_election_results_with_eg.csv', index=False)"
    ]
   },
   {
@@ -486,7 +486,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('state_legislative_election_results_with_eg.csv')\n",
+    "df = pd.read_csv('data/state_legislative_election_results_with_eg.csv')\n",
     "df.head()"
    ]
   },
@@ -758,8 +758,8 @@
     }
    ],
    "source": [
-    "# eg_df.to_csv('efficiency_gap_data.csv', index=False)\n",
-    "eg_df = pd.read_csv('efficiency_gap_data.csv')\n",
+    "# eg_df.to_csv('data/efficiency_gap_data.csv', index=False)\n",
+    "eg_df = pd.read_csv('data/efficiency_gap_data.csv')\n",
     "eg_df.head()"
    ]
   },
@@ -934,8 +934,8 @@
     }
    ],
    "source": [
-    "# eg_df2.to_csv('average_efficiency_gap_data.csv', index=False)\n",
-    "eg_df2 = pd.read_csv('average_efficiency_gap_data.csv')      \n",
+    "# eg_df2.to_csv('data/average_efficiency_gap_data.csv', index=False)\n",
+    "eg_df2 = pd.read_csv('data/average_efficiency_gap_data.csv')      \n",
     "eg_df2.head()"
    ]
   },
@@ -1463,7 +1463,7 @@
     }
    ],
    "source": [
-    "case_df = pd.read_csv('case_data.csv')\n",
+    "case_df = pd.read_csv('data/case_data.csv')\n",
     "print(case_df.shape)\n",
     "case_df.head()"
    ]
@@ -1664,8 +1664,8 @@
     "    \n",
     "case_df = case_df.sort_values(by=['Year', 'State'])\n",
     "case_df = case_df.reset_index(drop=True)\n",
-    "# case_df.to_csv('case_data_cleaned.csv', index=False)\n",
-    "case_df = pd.read_csv('case_data_cleaned.csv')\n",
+    "# case_df.to_csv('data/case_data_cleaned.csv', index=False)\n",
+    "case_df = pd.read_csv('data/case_data_cleaned.csv')\n",
     "case_df.head()"
    ]
   },
@@ -1853,8 +1853,8 @@
     }
    ],
    "source": [
-    "# case_df2.to_csv('case_data_graph.csv', index=False)\n",
-    "case_df2 = pd.read_csv('case_data_graph.csv')\n",
+    "# case_df2.to_csv('data/case_data_graph.csv', index=False)\n",
+    "case_df2 = pd.read_csv('data/case_data_graph.csv')\n",
     "case_df2.head()"
    ]
   },
